--- a/Lesson13.html
+++ b/Lesson13.html
@@ -29,8 +29,9 @@
         </div>
         <div class="lab__about">
             <div class="about__container">
-                <div class="container--head">ABOUT US</div>
-                <div class="container--text"> When you work with us, you are part of a team of committed collaborators.
+                <div class="about__container--head">ABOUT US</div>
+                <div class="about__container--text"> When you work with us, you are part of a team of committed
+                    collaborators.
                     <br>
                     All aspects of our software development process are integrated, iterative and agile.
 
@@ -41,6 +42,23 @@
                         Then we help translate them into effective and elegant solutions.</p>
                 </div>
             </div>
+        </div>
+        <div class="lab__services">
+            <fieldset class="services__container">
+
+                <legend class="services__container--head">SERVICES</legend>
+
+                <div class="services__container--text">
+                    Before we sign a contract or write a line of code our team will
+                    spend the <br> necessary time needed to understand your product vision. <br>
+
+                    The outcome of this scoping session is a proposal or high-level statement of <br>
+                    work. <br>
+                    <p> Based on your requirements, we can provide a complete offering or just the <br>
+                        pieces you need.</p>
+
+                </div>
+            </fieldset>
         </div>
 
     </section>
