--- a/Lesson13.html
+++ b/Lesson13.html
@@ -60,7 +60,39 @@
                 </div>
             </fieldset>
         </div>
+        <div class="lab__what">
 
+            <fieldset class="what__container">
+                <legend class="what__container--head">WHAT WE DO</legend>
+                <div class="what__container--text">
+
+                    <div> <img src="Foto/Shape 2.png" alt="shape">
+                        <div class="what__text--head">DESIGN</div>
+                        Our design practice offers a full range of services including branding strategy, <br>
+                        interaction and visual design and user experience testing. <br>
+                        Throughout your project, our designers create and implement visual designs and workflows,
+                        solicit user feedback, and work with you to make sure what gets built is what is needed.
+                    </div>
+                    <div>
+                        <img src="Foto/Shape 3.png" alt="shape">
+                        <div class="what__text--head">DEVELOPMENT</div>
+                        All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                        They collaborate with your team to write, test, and improve code on a daily basis, using <br>
+                        proven
+                        practices such as test-driven development and pair programing.
+                    </div>
+                    <div>
+                        <img src="Foto/Shape 4.png" alt="shape">
+                        <div class="what__text--head">PRODUCT MANAGEMENT </div>
+                        Planning and development is iterative. Because we are constantly coding and testing, the
+                        products we
+                        build are always ready to go live. This iterative process allows for changes as business
+                        requirements evolve.
+                    </div>
+                </div>
+            </fieldset>
+
+        </div>
     </section>
 
 
