--- a/Lesson13.html
+++ b/Lesson13.html
@@ -61,7 +61,6 @@
             </fieldset>
         </div>
         <div class="lab__what">
-
             <fieldset class="what__container">
                 <legend class="what__container--head">WHAT WE DO</legend>
                 <div class="what__container--text">
@@ -91,6 +90,27 @@
                     </div>
                 </div>
             </fieldset>
+        </div>
+        <div class="lab__works">
+
+            <div class="works--img1">
+                <div class="works__img--text"> TOPWORKZ</div>
+            </div>
+            <div class="works--img2">
+                <div class="works__img--text"> JOINT</div>
+            </div>
+            <div class="works--img3">
+                <div class="works__img--text"> MARKET</div>
+            </div>
+            <div class="works--img4">
+                <div class="works__img--text"> WORKTOP</div>
+            </div>
+            <div class="works--img5">
+                <div class="works__img--text"> LABLE</div>
+            </div>
+            <div class="works--img6">
+                <div class="works__img--text"> KYIV</div>
+            </div>
 
         </div>
     </section>
