--- a/Lesson13.html
+++ b/Lesson13.html
@@ -111,7 +111,19 @@
             <div class="works--img6">
                 <div class="works__img--text"> KYIV</div>
             </div>
+        </div>
+        <div class="lab__contact">
+            <fieldset class="contact__container">
 
+                <legend class="contact__container--head">CONTACT US</legend>
+
+                <div class="contact__container--text">
+                    Planning and development is iterative. Because we are constantly coding and testing, the products we
+                    build are always ready to go live. This iterative process allows for changes as business
+                    requirements evolve.
+                </div>
+                <button type="Contact" class="contact--button">CONTACT US</button>
+            </fieldset>
         </div>
     </section>
 
