--- a/Lesson13.html
+++ b/Lesson13.html
@@ -124,6 +124,9 @@
                 </div>
                 <button type="Contact" class="contact--button">CONTACT US</button>
             </fieldset>
+            <div class="contact--footer">
+                © 2014. All Rights Reserved Ellipsis.com
+            </div>
         </div>
     </section>
 
