--- a/Lesson13.html
+++ b/Lesson13.html
@@ -125,6 +125,7 @@
                 <button type="Contact" class="contact--button">CONTACT US</button>
             </fieldset>
             <div class="contact--footer">
+                <img src="Foto/Logo_footer.png" alt="Logo">
                 © 2014. All Rights Reserved Ellipsis.com
             </div>
         </div>
